Mon Jun 30 14:05:51 1997  Kevin L Mitchell  <klmitch@mit.edu>

	* accept_sec_context.c: added code to return a valid delegated
		credential handle if credentials were delegated.  The
		GSS_C_DELEG_FLAG from the client is ignored, and the
		option is only set if the client actually delegated
		credentials.

Fri Jun  6 15:26:27 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context): Reorganized
 		error handling code to be more compact (and correct!).  If
 		an error occurs while we are doing mutual authentication,
 		send an KRB_ERROR message back to the client, so that it
 		knows what is going on.  (This is specified by RFC 1964;
 		we just weren't implementing this previously.)
           
	* delete_sec_context.c (krb5_gss_delete_sec_context): Check to
 		make sure pointers in the context are non-zero before
 		freeing them.

	* init_sec_context.c (krb5_gss_init_sec_context): If the server
		sends a KRB_ERROR message, decode it and return an
		appropriate minor status error code.

Mon Mar 31 21:22:19 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* krb5_gss_glue.c: Add GSSAPI V2 calls to the glue layer.

Fri Mar 28 03:52:14 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* import_name.c (krb5_gss_import_name): Add support for importing
		the exported name call

	* export_name.c (krb5_gss_export_name): Fix export_name emit the token
		exactly as specified by RFC 2078.

Thu Mar 27 15:52:04 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Add canon_name.c, duplicate_name.c, export_name.c
		to the GSSAPI library.
	
	* canon_name.c (krb5_gss_canonicalize_name): New GSSAPI V2 function

	* duplicate_name.c (krb5_gss_duplicate_name): New GSSAPI V2 function

	* export_name.c (krb5_gss_export_name): New GSSAPI V2 function

	* gssapiP_krb5.h (KG_IMPLFLAGS): Add support for
		GSS_C_PROT_STATE_READY and GSS_C_TRANS_FLAG

Tue Mar 25 01:00:55 1997  Theodore Y. Ts'o  <tytso@mit.edu>
